// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`package > fixture esm-patch-imports > dist/index.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const subpath = require("@crackle-fixtures/dep-with-exports/subpath");
const index_js = require("@crackle-fixtures/dep-with-exports-always-patch/index.js");
const index_js$1 = require("autosuggest-highlight/parse/index.js");
const jsxRuntime_js = require("react/jsx-runtime.js");
const ReactDOM = require("react-dom/server.node.js");
const _interopDefaultCompat = (e) => e && typeof e === "object" && "default" in e ? e : { default: e };
const subpath__default = /* @__PURE__ */ _interopDefaultCompat(subpath);
const index_js__default = /* @__PURE__ */ _interopDefaultCompat(index_js);
const index_js__default$1 = /* @__PURE__ */ _interopDefaultCompat(index_js$1);
const ReactDOM__default = /* @__PURE__ */ _interopDefaultCompat(ReactDOM);
const App = () => /* @__PURE__ */ jsxRuntime_js.jsx("div", { children: "App" });
const render = () => ReactDOM__default.default.renderToStaticMarkup(/* @__PURE__ */ jsxRuntime_js.jsx(App, {}));
Object.defineProperty(exports, "scopedSubpath", {
  enumerable: true,
  get: () => subpath__default.default
});
Object.defineProperty(exports, "scopedPatchedSubpath", {
  enumerable: true,
  get: () => index_js__default.default
});
Object.defineProperty(exports, "cjsDirIndex", {
  enumerable: true,
  get: () => index_js__default$1.default
});
exports.App = App;
exports.render = render;
`;

exports[`package > fixture esm-patch-imports > dist/index.d.ts 1`] = `
export { default as scopedSubpath } from '@crackle-fixtures/dep-with-exports/subpath';
export { default as scopedPatchedSubpath } from '@crackle-fixtures/dep-with-exports-always-patch/index.js';
export { default as cjsDirIndex } from 'autosuggest-highlight/parse/index.js';
import React from 'react';

declare const App: React.FC;
declare const render: () => string;

export { App, render };
`;

exports[`package > fixture esm-patch-imports > dist/index.mjs 1`] = `
import { default as default2 } from "@crackle-fixtures/dep-with-exports/subpath";
import { default as default3 } from "@crackle-fixtures/dep-with-exports-always-patch/index.js";
import { default as default4 } from "autosuggest-highlight/parse/index.js";
import { jsx } from "react/jsx-runtime.js";
import ReactDOM from "react-dom/server.node.js";
const App = () => /* @__PURE__ */ jsx("div", { children: "App" });
const render = () => ReactDOM.renderToStaticMarkup(/* @__PURE__ */ jsx(App, {}));
export {
  App,
  default4 as cjsDirIndex,
  render,
  default3 as scopedPatchedSubpath,
  default2 as scopedSubpath
};
`;

exports[`package > fixture library-with-docs > dist/index.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const sideEffects_components_JobSummary_JobSummary_cjs = require("./side-effects/components/JobSummary/JobSummary.cjs");
exports.JobSummary = sideEffects_components_JobSummary_JobSummary_cjs.JobSummary;
`;

exports[`package > fixture library-with-docs > dist/index.d.ts 1`] = `
interface JobSummaryProps {
    title: string;
    isNew: boolean;
}
declare const JobSummary: ({ title, isNew }: JobSummaryProps) => JSX.Element;

export { JobSummary };
`;

exports[`package > fixture library-with-docs > dist/index.mjs 1`] = `
import { JobSummary } from "./side-effects/components/JobSummary/JobSummary.mjs";
export {
  JobSummary
};
`;

exports[`package > fixture library-with-docs > dist/side-effects/components/JobSummary/JobSummary.cjs 1`] = `
"use strict";
const jsxRuntime = require("react/jsx-runtime");
const braidDesignSystem = require("braid-design-system");
const values = require("lodash/values.js");
const styles_components_JobSummary_styles_css_cjs = require("../../../styles/components/JobSummary/styles.css.cjs");
const _interopDefaultCompat = (e) => e && typeof e === "object" && "default" in e ? e : { default: e };
const values__default = /* @__PURE__ */ _interopDefaultCompat(values);
const JobSummary = ({ title, isNew }) => /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Card, { children: /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Box, { className: styles_components_JobSummary_styles_css_cjs.redBorder, id: "CUSTOM_STYLED_BOX_COMPONENT", children: /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "gutter", children: [
  /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Columns, { space: "gutter", children: [
    /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Column, { children: /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "small", children: [
      isNew && /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Badge, { tone: "positive", children: "New" }),
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Heading, { level: "3", children: title }),
      /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Inline, { space: "small", children: [
        /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { tone: "secondary", children: "Braid Design Pty Ltd" }),
        /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Rating, { rating: 4.5 })
      ] })
    ] }) }),
    /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Column, { width: "content", children: /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconBookmark, {}) })
  ] }),
  /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "small", children: [
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconLocation, {}),
      " Melbourne"
    ] }),
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconTag, {}),
      " Information Technology"
    ] }),
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconMoney, {}),
      " 150k+"
    ] })
  ] }),
  /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { children: "Long description of card details providing more information." }),
  /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { size: "xsmall", tone: "secondary", children: values__default.default({ value: "2d", suffix: "ago" }).join(" ") })
] }) }) });
exports.JobSummary = JobSummary;
`;

exports[`package > fixture library-with-docs > dist/side-effects/components/JobSummary/JobSummary.mjs 1`] = `
import { jsx, jsxs } from "react/jsx-runtime";
import { Card, Box, Stack, Columns, Column, Badge, Heading, Inline, Text, Rating, IconBookmark, IconLocation, IconTag, IconMoney } from "braid-design-system";
import values from "lodash/values.js";
import { redBorder } from "../../../styles/components/JobSummary/styles.css.mjs";
const JobSummary = ({ title, isNew }) => /* @__PURE__ */ jsx(Card, { children: /* @__PURE__ */ jsx(Box, { className: redBorder, id: "CUSTOM_STYLED_BOX_COMPONENT", children: /* @__PURE__ */ jsxs(Stack, { space: "gutter", children: [
  /* @__PURE__ */ jsxs(Columns, { space: "gutter", children: [
    /* @__PURE__ */ jsx(Column, { children: /* @__PURE__ */ jsxs(Stack, { space: "small", children: [
      isNew && /* @__PURE__ */ jsx(Badge, { tone: "positive", children: "New" }),
      /* @__PURE__ */ jsx(Heading, { level: "3", children: title }),
      /* @__PURE__ */ jsxs(Inline, { space: "small", children: [
        /* @__PURE__ */ jsx(Text, { tone: "secondary", children: "Braid Design Pty Ltd" }),
        /* @__PURE__ */ jsx(Rating, { rating: 4.5 })
      ] })
    ] }) }),
    /* @__PURE__ */ jsx(Column, { width: "content", children: /* @__PURE__ */ jsx(IconBookmark, {}) })
  ] }),
  /* @__PURE__ */ jsxs(Stack, { space: "small", children: [
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconLocation, {}),
      " Melbourne"
    ] }),
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconTag, {}),
      " Information Technology"
    ] }),
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconMoney, {}),
      " 150k+"
    ] })
  ] }),
  /* @__PURE__ */ jsx(Text, { children: "Long description of card details providing more information." }),
  /* @__PURE__ */ jsx(Text, { size: "xsmall", tone: "secondary", children: values({ value: "2d", suffix: "ago" }).join(" ") })
] }) }) });
export {
  JobSummary
};
`;

exports[`package > fixture library-with-docs > dist/styles/components/JobSummary/styles.css.cjs 1`] = `
"use strict";
const fileScope = require("@vanilla-extract/css/fileScope");
const css = require("@vanilla-extract/css");
fileScope.setFileScope("src/components/JobSummary/styles.css.ts?used", "library-with-docs");
const redBorder = css.style({
  border: "5px solid red"
}, "redBorder");
fileScope.endFileScope();
exports.redBorder = redBorder;
`;

exports[`package > fixture library-with-docs > dist/styles/components/JobSummary/styles.css.mjs 1`] = `
import { setFileScope, endFileScope } from "@vanilla-extract/css/fileScope";
import { style } from "@vanilla-extract/css";
setFileScope("src/components/JobSummary/styles.css.ts?used", "library-with-docs");
const redBorder = style({
  border: "5px solid red"
}, "redBorder");
endFileScope();
export {
  redBorder
};
`;

exports[`package > fixture multi-entry-library > dist/apac.chunk.d.ts 1`] = `
interface JobSummaryProps {
    title: string;
    isNew: boolean;
}
declare const JobSummary: ({ title, isNew }: JobSummaryProps) => JSX.Element;

declare const add: (a: number, b: number) => number;

declare const _default: "I am theme";

export { JobSummary, _default, add };
`;

exports[`package > fixture multi-entry-library > dist/components.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const sideEffects_components_JobSummary_cjs = require("./side-effects/components/JobSummary.cjs");
exports.JobSummary = sideEffects_components_JobSummary_cjs.JobSummary;
`;

exports[`package > fixture multi-entry-library > dist/components.d.ts 1`] = `export { JobSummary } from './apac.chunk.js';`;

exports[`package > fixture multi-entry-library > dist/components.mjs 1`] = `
import { JobSummary } from "./side-effects/components/JobSummary.mjs";
export {
  JobSummary
};
`;

exports[`package > fixture multi-entry-library > dist/extras.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const sideEffects_extras_index_cjs = require("./side-effects/extras/index.cjs");
exports.calcAndLog = sideEffects_extras_index_cjs.calcAndLog;
exports.logger = sideEffects_extras_index_cjs.logger;
`;

exports[`package > fixture multi-entry-library > dist/extras.d.ts 1`] = `
declare global {
	// eslint-disable-next-line @typescript-eslint/consistent-type-definitions -- It has to be an \`interface\` so that it can be merged.
	interface SymbolConstructor {
		readonly observable: symbol;
	}
}

declare const logger$1: {
    debug: (msg: string) => false | void;
    info: (msg: string) => void;
    warn: (msg: string) => void;
    error: (msg: string) => void;
    errorWithExitCode: (msg: string) => void;
};

type MathsFn = (a: number, b: number) => number;

type InlinedType = typeof logger$1;
declare const logger: () => void;
declare const calcAndLog: (a: number, b: number, fn: MathsFn) => void;

export { InlinedType, calcAndLog, logger };
`;

exports[`package > fixture multi-entry-library > dist/extras.mjs 1`] = `
import { calcAndLog, logger } from "./side-effects/extras/index.mjs";
export {
  calcAndLog,
  logger
};
`;

exports[`package > fixture multi-entry-library > dist/index.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const sideEffects_components_JobSummary_cjs = require("./side-effects/components/JobSummary.cjs");
const add = (a, b) => a + b;
exports.JobSummary = sideEffects_components_JobSummary_cjs.JobSummary;
exports.add = add;
`;

exports[`package > fixture multi-entry-library > dist/index.d.ts 1`] = `export { JobSummary, add } from './apac.chunk.js';`;

exports[`package > fixture multi-entry-library > dist/index.mjs 1`] = `
import { JobSummary } from "./side-effects/components/JobSummary.mjs";
const add = (a, b) => a + b;
export {
  JobSummary,
  add
};
`;

exports[`package > fixture multi-entry-library > dist/side-effects/common/commonLogger.cjs 1`] = `
"use strict";
const isDebug = process.env.DEBUG != null;
const logger = {
  debug: (msg) => isDebug && console.info(msg),
  info: (msg) => console.info(msg),
  warn: (msg) => console.warn(msg),
  error: (msg) => console.error(msg),
  errorWithExitCode: (msg) => {
    console.error(msg);
    process.exitCode = 1;
  }
};
const logThePhrase = (input) => logger.info(\`Logged: \${input}\`);
exports.logThePhrase = logThePhrase;
`;

exports[`package > fixture multi-entry-library > dist/side-effects/common/commonLogger.mjs 1`] = `
const isDebug = process.env.DEBUG != null;
const logger = {
  debug: (msg) => isDebug && console.info(msg),
  info: (msg) => console.info(msg),
  warn: (msg) => console.warn(msg),
  error: (msg) => console.error(msg),
  errorWithExitCode: (msg) => {
    console.error(msg);
    process.exitCode = 1;
  }
};
const logThePhrase = (input) => logger.info(\`Logged: \${input}\`);
export {
  logThePhrase
};
`;

exports[`package > fixture multi-entry-library > dist/side-effects/components/JobSummary.cjs 1`] = `
"use strict";
const jsxRuntime = require("react/jsx-runtime");
const braidDesignSystem = require("braid-design-system");
const JobSummary = ({ title, isNew }) => /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Card, { children: /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "gutter", children: [
  /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Columns, { space: "gutter", children: [
    /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Column, { children: /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "small", children: [
      isNew && /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Badge, { tone: "positive", children: "New" }),
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Heading, { level: "3", children: title }),
      /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Inline, { space: "small", children: [
        /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { tone: "secondary", children: "Braid Design Pty Ltd" }),
        /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Rating, { rating: 4.5 })
      ] })
    ] }) }),
    /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Column, { width: "content", children: /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconBookmark, {}) })
  ] }),
  /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "small", children: [
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconLocation, {}),
      " Melbourne"
    ] }),
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconTag, {}),
      " Information Technology"
    ] }),
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconMoney, {}),
      " 150k+"
    ] })
  ] }),
  /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { children: "Long description of card details providing more information." }),
  /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { size: "xsmall", tone: "secondary", children: "2d ago" })
] }) });
exports.JobSummary = JobSummary;
`;

exports[`package > fixture multi-entry-library > dist/side-effects/components/JobSummary.mjs 1`] = `
import { jsx, jsxs } from "react/jsx-runtime";
import { Card, Stack, Columns, Column, Badge, Heading, Inline, Text, Rating, IconBookmark, IconLocation, IconTag, IconMoney } from "braid-design-system";
const JobSummary = ({ title, isNew }) => /* @__PURE__ */ jsx(Card, { children: /* @__PURE__ */ jsxs(Stack, { space: "gutter", children: [
  /* @__PURE__ */ jsxs(Columns, { space: "gutter", children: [
    /* @__PURE__ */ jsx(Column, { children: /* @__PURE__ */ jsxs(Stack, { space: "small", children: [
      isNew && /* @__PURE__ */ jsx(Badge, { tone: "positive", children: "New" }),
      /* @__PURE__ */ jsx(Heading, { level: "3", children: title }),
      /* @__PURE__ */ jsxs(Inline, { space: "small", children: [
        /* @__PURE__ */ jsx(Text, { tone: "secondary", children: "Braid Design Pty Ltd" }),
        /* @__PURE__ */ jsx(Rating, { rating: 4.5 })
      ] })
    ] }) }),
    /* @__PURE__ */ jsx(Column, { width: "content", children: /* @__PURE__ */ jsx(IconBookmark, {}) })
  ] }),
  /* @__PURE__ */ jsxs(Stack, { space: "small", children: [
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconLocation, {}),
      " Melbourne"
    ] }),
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconTag, {}),
      " Information Technology"
    ] }),
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconMoney, {}),
      " 150k+"
    ] })
  ] }),
  /* @__PURE__ */ jsx(Text, { children: "Long description of card details providing more information." }),
  /* @__PURE__ */ jsx(Text, { size: "xsmall", tone: "secondary", children: "2d ago" })
] }) });
export {
  JobSummary
};
`;

exports[`package > fixture multi-entry-library > dist/side-effects/components/index.cjs 1`] = `"use strict";`;

exports[`package > fixture multi-entry-library > dist/side-effects/components/index.mjs 1`] = ``;

exports[`package > fixture multi-entry-library > dist/side-effects/extras/index.cjs 1`] = `
"use strict";
const sideEffects_common_commonLogger_cjs = require("../common/commonLogger.cjs");
const logger = () => sideEffects_common_commonLogger_cjs.logThePhrase("This is a logger");
const calcAndLog = (a, b, fn) => {
  sideEffects_common_commonLogger_cjs.logThePhrase(fn(a, b).toString());
};
exports.calcAndLog = calcAndLog;
exports.logger = logger;
`;

exports[`package > fixture multi-entry-library > dist/side-effects/extras/index.mjs 1`] = `
import { logThePhrase } from "../common/commonLogger.mjs";
const logger = () => logThePhrase("This is a logger");
const calcAndLog = (a, b, fn) => {
  logThePhrase(fn(a, b).toString());
};
export {
  calcAndLog,
  logger
};
`;

exports[`package > fixture multi-entry-library > dist/themes/apac.cjs 1`] = `
"use strict";
const apac = "I am theme";
module.exports = apac;
`;

exports[`package > fixture multi-entry-library > dist/themes/apac.d.ts 1`] = `export { _default as default } from '../apac.chunk.js';`;

exports[`package > fixture multi-entry-library > dist/themes/apac.mjs 1`] = `
const apac = "I am theme";
export {
  apac as default
};
`;

exports[`package > fixture single-entry-library > dist/index.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const sideEffects_components_JobSummary_cjs = require("./side-effects/components/JobSummary.cjs");
const components = require("@crackle-fixtures/multi-entry-library/components");
exports.JobSummary = sideEffects_components_JobSummary_cjs.JobSummary;
Object.defineProperty(exports, "MultiJobSummary", {
  enumerable: true,
  get: () => components.JobSummary
});
`;

exports[`package > fixture single-entry-library > dist/index.d.ts 1`] = `
export { JobSummary as MultiJobSummary } from '@crackle-fixtures/multi-entry-library/components';

interface JobSummaryProps {
    title: string;
    isNew: boolean;
}
declare const JobSummary: ({ title, isNew }: JobSummaryProps) => JSX.Element;

export { JobSummary };
`;

exports[`package > fixture single-entry-library > dist/index.mjs 1`] = `
import { JobSummary } from "./side-effects/components/JobSummary.mjs";
import { JobSummary as JobSummary2 } from "@crackle-fixtures/multi-entry-library/components";
export {
  JobSummary,
  JobSummary2 as MultiJobSummary
};
`;

exports[`package > fixture single-entry-library > dist/side-effects/components/JobSummary.cjs 1`] = `
"use strict";
const jsxRuntime = require("react/jsx-runtime");
const braidDesignSystem = require("braid-design-system");
const styles_components_addFn_cjs = require("../../styles/components/add-fn.cjs");
const styles_components_styles_css_cjs = require("../../styles/components/styles.css.cjs");
const JobSummary = ({ title, isNew }) => /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Card, { children: /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Box, { className: styles_components_styles_css_cjs.redBorder, id: "CUSTOM_STYLED_BOX_COMPONENT", children: /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "gutter", children: [
  /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Columns, { space: "gutter", children: [
    /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Column, { children: /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "small", children: [
      isNew && /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Badge, { tone: "positive", children: "New" }),
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Heading, { level: "3", children: title }),
      /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Inline, { space: "small", children: [
        /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { tone: "secondary", children: "Braid Design Pty Ltd" }),
        /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Rating, { rating: styles_components_addFn_cjs.add(2, 1) })
      ] })
    ] }) }),
    /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Column, { width: "content", children: /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconBookmark, {}) })
  ] }),
  /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Stack, { space: "small", children: [
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconLocation, {}),
      " Melbourne"
    ] }),
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconTag, {}),
      " Information Technology"
    ] }),
    /* @__PURE__ */ jsxRuntime.jsxs(braidDesignSystem.Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.IconMoney, {}),
      " 150k+"
    ] })
  ] }),
  /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { children: "Long description of card details providing more information." }),
  /* @__PURE__ */ jsxRuntime.jsx(braidDesignSystem.Text, { size: "xsmall", tone: "secondary", children: "2d ago" })
] }) }) });
exports.JobSummary = JobSummary;
`;

exports[`package > fixture single-entry-library > dist/side-effects/components/JobSummary.mjs 1`] = `
import { jsx, jsxs } from "react/jsx-runtime";
import { Card, Box, Stack, Columns, Column, Badge, Heading, Inline, Text, Rating, IconBookmark, IconLocation, IconTag, IconMoney } from "braid-design-system";
import { add } from "../../styles/components/add-fn.mjs";
import { redBorder } from "../../styles/components/styles.css.mjs";
const JobSummary = ({ title, isNew }) => /* @__PURE__ */ jsx(Card, { children: /* @__PURE__ */ jsx(Box, { className: redBorder, id: "CUSTOM_STYLED_BOX_COMPONENT", children: /* @__PURE__ */ jsxs(Stack, { space: "gutter", children: [
  /* @__PURE__ */ jsxs(Columns, { space: "gutter", children: [
    /* @__PURE__ */ jsx(Column, { children: /* @__PURE__ */ jsxs(Stack, { space: "small", children: [
      isNew && /* @__PURE__ */ jsx(Badge, { tone: "positive", children: "New" }),
      /* @__PURE__ */ jsx(Heading, { level: "3", children: title }),
      /* @__PURE__ */ jsxs(Inline, { space: "small", children: [
        /* @__PURE__ */ jsx(Text, { tone: "secondary", children: "Braid Design Pty Ltd" }),
        /* @__PURE__ */ jsx(Rating, { rating: add(2, 1) })
      ] })
    ] }) }),
    /* @__PURE__ */ jsx(Column, { width: "content", children: /* @__PURE__ */ jsx(IconBookmark, {}) })
  ] }),
  /* @__PURE__ */ jsxs(Stack, { space: "small", children: [
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconLocation, {}),
      " Melbourne"
    ] }),
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconTag, {}),
      " Information Technology"
    ] }),
    /* @__PURE__ */ jsxs(Text, { size: "small", tone: "secondary", children: [
      /* @__PURE__ */ jsx(IconMoney, {}),
      " 150k+"
    ] })
  ] }),
  /* @__PURE__ */ jsx(Text, { children: "Long description of card details providing more information." }),
  /* @__PURE__ */ jsx(Text, { size: "xsmall", tone: "secondary", children: "2d ago" })
] }) }) });
export {
  JobSummary
};
`;

exports[`package > fixture single-entry-library > dist/styles/components/add-fn.cjs 1`] = `
"use strict";
const add = (a, b) => a - b;
exports.add = add;
`;

exports[`package > fixture single-entry-library > dist/styles/components/add-fn.mjs 1`] = `
const add = (a, b) => a - b;
export {
  add
};
`;

exports[`package > fixture single-entry-library > dist/styles/components/styles.css.cjs 1`] = `
"use strict";
const fileScope = require("@vanilla-extract/css/fileScope");
const css = require("@vanilla-extract/css");
const styles_components_addFn_cjs = require("./add-fn.cjs");
fileScope.setFileScope("src/components/styles.css.ts?used", "single-entry-library");
const redBorder = css.style({
  border: "5px solid papayawhip",
  margin: styles_components_addFn_cjs.add(10, 5)
}, "redBorder");
fileScope.endFileScope();
exports.redBorder = redBorder;
`;

exports[`package > fixture single-entry-library > dist/styles/components/styles.css.mjs 1`] = `
import { setFileScope, endFileScope } from "@vanilla-extract/css/fileScope";
import { style } from "@vanilla-extract/css";
import { add } from "./add-fn.mjs";
setFileScope("src/components/styles.css.ts?used", "single-entry-library");
const redBorder = style({
  border: "5px solid papayawhip",
  margin: add(10, 5)
}, "redBorder");
endFileScope();
export {
  redBorder
};
`;

exports[`package > fixture with-dep-hidden-package-json > dist/index.cjs 1`] = `
"use strict";
const hiddenPackageJson = require("@crackle-fixtures/hidden-package-json");
const _interopDefaultCompat = (e) => e && typeof e === "object" && "default" in e ? e : { default: e };
const hiddenPackageJson__default = /* @__PURE__ */ _interopDefaultCompat(hiddenPackageJson);
module.exports = hiddenPackageJson__default.default;
`;

exports[`package > fixture with-dep-hidden-package-json > dist/index.d.ts 1`] = `export { default } from '@crackle-fixtures/hidden-package-json';`;

exports[`package > fixture with-dep-hidden-package-json > dist/index.mjs 1`] = `
import { default as default2 } from "@crackle-fixtures/hidden-package-json";
export {
  default2 as default
};
`;

exports[`package > fixture with-flatten-children > dist/index.cjs 1`] = `
"use strict";
const flattenChildren = require("react-keyed-flatten-children");
const _interopDefaultCompat = (e) => e && typeof e === "object" && "default" in e ? e : { default: e };
const flattenChildren__default = /* @__PURE__ */ _interopDefaultCompat(flattenChildren);
flattenChildren__default.default([]);
`;

exports[`package > fixture with-flatten-children > dist/index.d.ts 1`] = `export { }`;

exports[`package > fixture with-flatten-children > dist/index.mjs 1`] = `
import flattenChildren from "react-keyed-flatten-children";
flattenChildren([]);
`;

exports[`package > fixture with-side-effects > dist/Box.chunk.cjs 1`] = `
"use strict";
const Box = () => null;
exports.Box = Box;
`;

exports[`package > fixture with-side-effects > dist/Box.chunk.mjs 1`] = `
const Box = () => null;
export {
  Box
};
`;

exports[`package > fixture with-side-effects > dist/css.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const Box = require("./Box.chunk.cjs");
exports.Box = Box.Box;
`;

exports[`package > fixture with-side-effects > dist/css.d.ts 1`] = `export { Box } from './index.js';`;

exports[`package > fixture with-side-effects > dist/css.mjs 1`] = `
import { Box } from "./Box.chunk.mjs";
export {
  Box
};
`;

exports[`package > fixture with-side-effects > dist/css-more.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const styles_lib_breakpoints_cjs = require("./styles/lib/breakpoints.cjs");
const Box = require("./Box.chunk.cjs");
exports.breakpointNames = styles_lib_breakpoints_cjs.breakpointNames;
exports.breakpoints = styles_lib_breakpoints_cjs.breakpoints;
exports.Box = Box.Box;
`;

exports[`package > fixture with-side-effects > dist/css-more.d.ts 1`] = `export { Box, Breakpoint, breakpointNames, breakpoints } from './index.js';`;

exports[`package > fixture with-side-effects > dist/css-more.mjs 1`] = `
import { breakpointNames, breakpoints } from "./styles/lib/breakpoints.mjs";
import { Box } from "./Box.chunk.mjs";
export {
  Box,
  breakpointNames,
  breakpoints
};
`;

exports[`package > fixture with-side-effects > dist/index.cjs 1`] = `
"use strict";
const sideEffects_lib_reset_resetTracker_cjs = require("./side-effects/lib/reset/resetTracker.cjs");
if (process.env.NODE_ENV === "development") {
  sideEffects_lib_reset_resetTracker_cjs.ensureResetImported();
}
`;

exports[`package > fixture with-side-effects > dist/index.d.ts 1`] = `
declare const breakpointNames: readonly ["mobile", "tablet", "desktop", "wide"];
declare const breakpoints: {
    readonly mobile: 0;
    readonly tablet: 740;
    readonly desktop: 992;
    readonly wide: 1200;
};
type Breakpoint = keyof typeof breakpoints;

declare const Box: () => null;

export { Box, Breakpoint, breakpointNames, breakpoints };
`;

exports[`package > fixture with-side-effects > dist/index.mjs 1`] = `
import { ensureResetImported } from "./side-effects/lib/reset/resetTracker.mjs";
if (process.env.NODE_ENV === "development") {
  ensureResetImported();
}
`;

exports[`package > fixture with-side-effects > dist/reset.cjs 1`] = `
"use strict";
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
require("./side-effects/lib/reset/index.cjs");
const styles_lib_breakpoints_cjs = require("./styles/lib/breakpoints.cjs");
if (process.env.NO_SIDE_EFFECTS !== "clearly") {
  throw new Error("side-effect");
}
exports.breakpointNames = styles_lib_breakpoints_cjs.breakpointNames;
exports.breakpoints = styles_lib_breakpoints_cjs.breakpoints;
`;

exports[`package > fixture with-side-effects > dist/reset.d.ts 1`] = `export { Breakpoint, breakpointNames, breakpoints } from './index.js';`;

exports[`package > fixture with-side-effects > dist/reset.mjs 1`] = `
import "./side-effects/lib/reset/index.mjs";
import { breakpointNames, breakpoints } from "./styles/lib/breakpoints.mjs";
if (process.env.NO_SIDE_EFFECTS !== "clearly") {
  throw new Error("side-effect");
}
export {
  breakpointNames,
  breakpoints
};
`;

exports[`package > fixture with-side-effects > dist/side-effects/lib/atoms/atoms.cjs 1`] = `
"use strict";
require("../../../styles/lib/reset/reset.css.cjs");
require("../../../styles/lib/atoms/sprinkles.css.cjs");
`;

exports[`package > fixture with-side-effects > dist/side-effects/lib/atoms/atoms.mjs 1`] = `
import "../../../styles/lib/reset/reset.css.mjs";
import "../../../styles/lib/atoms/sprinkles.css.mjs";
`;

exports[`package > fixture with-side-effects > dist/side-effects/lib/reset/index.cjs 1`] = `
"use strict";
const sideEffects_lib_reset_resetTracker_cjs = require("./resetTracker.cjs");
require("../../../styles/lib/reset/reset.css.cjs");
require("../../../styles/lib/atoms/sprinkles.css.cjs");
if (process.env.NODE_ENV === "development") {
  sideEffects_lib_reset_resetTracker_cjs.markResetImported();
}
`;

exports[`package > fixture with-side-effects > dist/side-effects/lib/reset/index.mjs 1`] = `
import { markResetImported } from "./resetTracker.mjs";
import "../../../styles/lib/reset/reset.css.mjs";
import "../../../styles/lib/atoms/sprinkles.css.mjs";
if (process.env.NODE_ENV === "development") {
  markResetImported();
}
`;

exports[`package > fixture with-side-effects > dist/side-effects/lib/reset/resetTracker.cjs 1`] = `
"use strict";
let resetImported = false;
const markResetImported = () => {
  resetImported = true;
};
const ensureResetImported = () => {
  if (!resetImported) {
    throw new Error("Braid components imported before reset");
  }
};
exports.ensureResetImported = ensureResetImported;
exports.markResetImported = markResetImported;
`;

exports[`package > fixture with-side-effects > dist/side-effects/lib/reset/resetTracker.mjs 1`] = `
let resetImported = false;
const markResetImported = () => {
  resetImported = true;
};
const ensureResetImported = () => {
  if (!resetImported) {
    throw new Error("Braid components imported before reset");
  }
};
export {
  ensureResetImported,
  markResetImported
};
`;

exports[`package > fixture with-side-effects > dist/styles/lib/atoms/atomicProperties.cjs 1`] = `
"use strict";
const space = {
  medium: "5px",
  none: 0
};
const responsiveProperties = {
  display: {
    none: "none",
    block: "block",
    inline: "inline",
    inlineBlock: "inline-block",
    flex: "flex"
  },
  position: ["relative", "absolute", "fixed"],
  paddingTop: space,
  paddingBottom: space,
  paddingRight: space,
  paddingLeft: space
};
exports.responsiveProperties = responsiveProperties;
`;

exports[`package > fixture with-side-effects > dist/styles/lib/atoms/atomicProperties.mjs 1`] = `
const space = {
  medium: "5px",
  none: 0
};
const responsiveProperties = {
  display: {
    none: "none",
    block: "block",
    inline: "inline",
    inlineBlock: "inline-block",
    flex: "flex"
  },
  position: ["relative", "absolute", "fixed"],
  paddingTop: space,
  paddingBottom: space,
  paddingRight: space,
  paddingLeft: space
};
export {
  responsiveProperties
};
`;

exports[`package > fixture with-side-effects > dist/styles/lib/atoms/sprinkles.css.cjs 1`] = `
"use strict";
const fileScope = require("@vanilla-extract/css/fileScope");
const css = require("@vanilla-extract/css");
const sprinkles = require("@vanilla-extract/sprinkles");
const styles_lib_breakpoints_cjs = require("../breakpoints.cjs");
const styles_lib_atoms_atomicProperties_cjs = require("./atomicProperties.cjs");
fileScope.setFileScope("src/lib/atoms/sprinkles.css.ts?used", "with-side-effects");
css.style({}, "darkMode");
const responsiveAtomicProperties = sprinkles.defineProperties({
  defaultCondition: "mobile",
  conditions: {
    mobile: {},
    tablet: {
      "@media": \`screen and (min-width: \${styles_lib_breakpoints_cjs.breakpoints.tablet}px)\`
    },
    desktop: {
      "@media": \`screen and (min-width: \${styles_lib_breakpoints_cjs.breakpoints.desktop}px)\`
    },
    wide: {
      "@media": \`screen and (min-width: \${styles_lib_breakpoints_cjs.breakpoints.wide}px)\`
    }
  },
  responsiveArray: styles_lib_breakpoints_cjs.breakpointNames,
  properties: styles_lib_atoms_atomicProperties_cjs.responsiveProperties,
  shorthands: {
    padding: ["paddingBottom", "paddingTop", "paddingLeft", "paddingRight"],
    paddingY: ["paddingTop", "paddingBottom"],
    paddingX: ["paddingLeft", "paddingRight"]
  }
});
sprinkles.createSprinkles(responsiveAtomicProperties);
sprinkles.createNormalizeValueFn(responsiveAtomicProperties);
sprinkles.createMapValueFn(responsiveAtomicProperties);
fileScope.endFileScope();
`;

exports[`package > fixture with-side-effects > dist/styles/lib/atoms/sprinkles.css.mjs 1`] = `
import { setFileScope, endFileScope } from "@vanilla-extract/css/fileScope";
import { style } from "@vanilla-extract/css";
import { defineProperties, createSprinkles, createNormalizeValueFn, createMapValueFn } from "@vanilla-extract/sprinkles";
import { breakpoints, breakpointNames } from "../breakpoints.mjs";
import { responsiveProperties } from "./atomicProperties.mjs";
setFileScope("src/lib/atoms/sprinkles.css.ts?used", "with-side-effects");
style({}, "darkMode");
const responsiveAtomicProperties = defineProperties({
  defaultCondition: "mobile",
  conditions: {
    mobile: {},
    tablet: {
      "@media": \`screen and (min-width: \${breakpoints.tablet}px)\`
    },
    desktop: {
      "@media": \`screen and (min-width: \${breakpoints.desktop}px)\`
    },
    wide: {
      "@media": \`screen and (min-width: \${breakpoints.wide}px)\`
    }
  },
  responsiveArray: breakpointNames,
  properties: responsiveProperties,
  shorthands: {
    padding: ["paddingBottom", "paddingTop", "paddingLeft", "paddingRight"],
    paddingY: ["paddingTop", "paddingBottom"],
    paddingX: ["paddingLeft", "paddingRight"]
  }
});
createSprinkles(responsiveAtomicProperties);
createNormalizeValueFn(responsiveAtomicProperties);
createMapValueFn(responsiveAtomicProperties);
endFileScope();
`;

exports[`package > fixture with-side-effects > dist/styles/lib/breakpoints.cjs 1`] = `
"use strict";
const breakpointNames = ["mobile", "tablet", "desktop", "wide"];
const breakpoints = {
  mobile: 0,
  tablet: 740,
  desktop: 992,
  wide: 1200
};
exports.breakpointNames = breakpointNames;
exports.breakpoints = breakpoints;
`;

exports[`package > fixture with-side-effects > dist/styles/lib/breakpoints.mjs 1`] = `
const breakpointNames = ["mobile", "tablet", "desktop", "wide"];
const breakpoints = {
  mobile: 0,
  tablet: 740,
  desktop: 992,
  wide: 1200
};
export {
  breakpointNames,
  breakpoints
};
`;

exports[`package > fixture with-side-effects > dist/styles/lib/reset/reset.css.cjs 1`] = `
"use strict";
const fileScope = require("@vanilla-extract/css/fileScope");
const css = require("@vanilla-extract/css");
fileScope.setFileScope("src/lib/reset/reset.css.ts?used", "with-side-effects");
const hideFocusRingsDataAttribute = "data-braid-hidefocusrings";
css.style({
  margin: 0,
  padding: 0,
  border: 0,
  boxSizing: "border-box",
  fontSize: "100%",
  font: "inherit",
  verticalAlign: "baseline",
  WebkitTapHighlightColor: "transparent",
  selectors: {
    [\`[\${hideFocusRingsDataAttribute}] &\`]: {
      outline: "none"
    }
  }
}, "base");
css.style({
  display: "block"
}, "block");
fileScope.endFileScope();
`;

exports[`package > fixture with-side-effects > dist/styles/lib/reset/reset.css.mjs 1`] = `
import { setFileScope, endFileScope } from "@vanilla-extract/css/fileScope";
import { style } from "@vanilla-extract/css";
setFileScope("src/lib/reset/reset.css.ts?used", "with-side-effects");
const hideFocusRingsDataAttribute = "data-braid-hidefocusrings";
style({
  margin: 0,
  padding: 0,
  border: 0,
  boxSizing: "border-box",
  fontSize: "100%",
  font: "inherit",
  verticalAlign: "baseline",
  WebkitTapHighlightColor: "transparent",
  selectors: {
    [\`[\${hideFocusRingsDataAttribute}] &\`]: {
      outline: "none"
    }
  }
}, "base");
style({
  display: "block"
}, "block");
endFileScope();
`;
